# Pref

./: CHANGELOG.md  Pref.cabal  README.md
.github/workflows/: haskell.yml
src/: CpsApp.hs  Errors.hs  Exp.hs  Lexer.hs  Main.hs  Parser.hs  Pref.hs  TH.hs  Tokens.hs
src/Example/: THExample.hs
src/Print/: Pref.hs
src/Syntax/: Exp.hs  Tokens.hs
src/Transform/: CPS.hs  Uniquify.hs
test-files/: test1.pref  test2.pref  test4.pref  test5.pref  test6.pref
tests/: CpserTests.hs  InterpTests.hs  LexerTests.hs  Main.hs  ParserTests.hs  PrefTest.hs  Test.hs
tests/Transform/: CpserTests.hs  UniquifyTests.hs
tests/Transform/uniquify-tests/: 10.in  10.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
tests/test-files/: test1.pref  test2.pref  test3.out  test3.pref  test4.out  test4.pref  test7.pref  variable.pref
