name:                Pref
version:             0.3.2.1
license:             BSD3
license-file:        LICENSE
author:              Turab Jafri
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       2.0

library
  hs-source-dirs:      src
  exposed-modules:     Pref,
                       Syntax.Exp,
                       Transform.CPS
  other-modules:       Errors ,
                       Lexer ,
                       Parser
  build-depends:       base >=4.12 && <4.13,
                       containers,
                       dlist ==0.8.*,
                       effect-stack ==0.1.*,
                       mtl >= 2.2.2,
                       parsec ==3.1.*,
                       prettyprinter >= 1.3.0,
                       text >= 1.2.3
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

executable cps
  main-is:             src/CpsApp.hs
  build-depends:       base >=4.12 && <4.13,
                       Pref >=0.3.0.0,
                       mtl >= 2.2.2,
                       optparse-applicative ^>= 0.15.0,
                       text >= 1.2.3
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

executable pref
  main-is:             src/Main.hs
  build-depends:       base >=4.12 && <4.13,
                       Pref >=0.3.0.0,
                       mtl >= 2.2.2,
                       optparse-applicative ^>= 0.15.0,
                       text >= 1.2.3
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

test-suite pref-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:       CpserTests ,
                       ParserTests ,
                       InterpTests
  build-depends:       HUnit,
                       Pref,
                       base >=4.12 && <4.13,
                       containers,
                       mtl >= 2.2.2,
                       test-framework,
                       test-framework-hunit,
                       text >= 1.2.3
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
